<resources>
    <string name="app_name">MyAidlClientService</string>

    <string name="service_title">AidlService Controls:</string>

    <string name="bind_service">Bind Service</string>
    <string name="unbind_service">Unbind Service</string>
    <string name="service_data">Service data:</string>
    <string name="null_data">NULL</string>

    <string name="connected">Connected to MyAidlService</string>
    <string name="disconnected">Disconnected from MyAidlService</string>
    <string name="service_does_not_exists">MyAidlService does not exists</string>

    <string name="service_started">MyAidlService has started</string>
    <string name="service_stopped">MyAidlService has stopped</string>
    <string name="channel_name">MyAidlServiceChannel</string>
    <string name="channel_description">MyAidlServiceChannelDescription</string>
</resources>
