<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:padding="4dip"
    android:gravity="center_horizontal"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_weight="0"
        android:paddingTop="4dip"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/service_title"/>

    <Button android:id="@+id/bind_btn"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/bind_service">
        <requestFocus />
    </Button>

    <Button android:id="@+id/unbind_btn"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/unbind_service"
        android:enabled="false">
    </Button>

    <TextView
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_weight="0" android:paddingBottom="4dip"
        android:gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/service_data"/>

    <TextView android:id="@+id/data_tv"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center_horizontal" android:paddingTop="4dip"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/null_data"/>
</LinearLayout>
